# newbogcoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  libbogcoinconsensus.pc.in
.travis/: lint_04_install.sh  lint_05_before_script.sh  lint_06_script.sh  test_03_before_install.sh  test_04_install.sh  test_05_before_script.sh  test_06_script.sh
build-aux/m4/: bogcoin_find_bdb48.m4  bogcoin_qt.m4  bogcoin_subdir_to_include.m4
contrib/: README.md  bogcoin-cli.bash-completion  bogcoin-qt.pro  bogcoin-tx.bash-completion  gitian-build.sh  install_db4.sh  qt_translations.py  tidy_datadir.sh  valgrind.supp
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: bogcoin-qt.desktop.desktop  bogcoin-qt.install  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  check-doc.py  fix-copyright-headers.py  gen-manpages.sh  git-subtree-check.sh  github-merge.py  lint-whitespace.sh  logprint-scanner.py  optimize-pngs.py  security-check.py  symbol-check.py  (+2 more)
depends/: Makefile  README.md  description.md
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  gitian-building.md  guide-startmany.md  masternode-budget.md  masternode-community.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  travis-ci.txt  zmq.md
share/: genbuild.sh  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bip38.cpp  bip38.h  bloom.cpp  bloom.h  bogcoin-cli-res.rc  bogcoin-cli.cpp  bogcoin-tx-res.rc  bogcoin-tx.cpp  bogcoind-res.rc  bogcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  (+119 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bip38tooldialog.cpp  bip38tooldialog.h  blockexplorer.cpp  blockexplorer.h  bogcoin.cpp  bogcoin.qrc  bogcoinaddressvalidator.cpp  bogcoinaddressvalidator.h  bogcoinamountfield.cpp  bogcoinamountfield.h  bogcoingui.cpp  bogcoingui.h  bogcoinstrings.cpp  bogcoinunits.cpp  bogcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  (+89 more)
src/qt/forms/: bip38tooldialog.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bogcoin_bg.ts  bogcoin_ca.ts  bogcoin_cs.ts  bogcoin_da.ts  bogcoin_de.ts  bogcoin_en.ts  bogcoin_en_US.ts  bogcoin_es.ts  bogcoin_fi.ts  bogcoin_fr_FR.ts  bogcoin_it.ts  bogcoin_ja.ts  bogcoin_ko_KR.ts  bogcoin_nl.ts  bogcoin_pl.ts  bogcoin_pt.ts  bogcoin_pt_BR.ts  bogcoin_ro_RO.ts  bogcoin_ru.ts  bogcoin_sk.ts  bogcoin_sv.ts  bogcoin_tr.ts  bogcoin_uk.ts  bogcoin_zh_CN.ts  bogcoin_zh_TW.ts
src/qt/res/: bogcoin-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: bogcoinconsensus.cpp  bogcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_bogcoin_NativeSecp256k1.c  org_bogcoin_NativeSecp256k1.h  org_bogcoin_Secp256k1Context.c  org_bogcoin_Secp256k1Context.h
src/secp256k1/src/java/org/bogcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.cpp  cleanse.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  bogcoin-util-test.py  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_bogcoin.cpp  test_bogcoin.h  timedata_tests.cpp  (+4 more)
src/test/data/: README.md  base58_keys_valid.json  bogcoin-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/univalue/test/: object.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
test/: README.md  config.ini.in
(+95 files in other folders)
